--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Condenses reddit's top posts into a lightning fast browsing experience.",
   "main": "index.js",
   "scripts": {
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/index.js",
+    "dev": "webpack-dev-server --env.dev",
+    "build": "webpack",
+    "start": "node ./server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +20,22 @@
   "bugs": {
     "url": "https://github.com/Jongerr/expreddit/issues"
   },
-  "homepage": "https://github.com/Jongerr/expreddit#readme"
+  "homepage": "https://github.com/Jongerr/expreddit#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
+  },
+  "dependencies": {
+    "express": "^4.16.2",
+    "nodemon": "^1.14.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  }
 }
