Add request module and skelleton for getSubredditData.js helper functions

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.16.2",
     "nodemon": "^1.14.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "request": "^2.83.0"
   }
 }
